--- a/index.html
+++ b/index.html
@@ -134,6 +134,53 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum facilis repellendus fugit</p>
             </div>
 
+
+
+            <div class="DivClass2">
+                <div class="DivClass3">
+                    <div class="DivClass4">
+                        <div class="DivClass5">
+                            <img src="images/bus-logo.png" alt="">
+                            <div>
+                                <h2>AR Paribahan</h2>
+                                <p>Coach-009 | WEB | AC-Business</p>
+                            </div>
+                        </div>
+    
+                        <div class="DivClass6">
+                            <img src="images/fare.png" alt="">
+                            <div>
+                                <h2>550 Taka</h2>
+                                <p>Per Seat</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="DivClass7">
+                        <div class="DivClass8">
+                            <p>Route</p>
+                            <h3>Dhaka - Barishal</h3>
+                        </div>
+                        <div class="DivClass8">
+                            <p>Departure Time</p>
+                            <h3>9:00 PM</h3>
+                        </div>
+
+                    </div>
+                    <div class="DivClass9">
+                        <div><p>Boarding point - Jatrabari</p></div>
+                        <div><P>Dropping point - Rupatoli</P></div>
+                        <div><p>Est. Time - 4.5 Hours</p></div>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
         </div>
 
      </section>
