--- a/index.html
+++ b/index.html
@@ -282,8 +282,72 @@
 
 
                 </div>
+
+
+
+
                 <hr>
-                <div class="DivClass12"></div>
+
+
+
+
+
+                <div class="DivClass12">
+                    <h1 id="id3">Something</h1>
+                    <hr>
+
+                     <div class="DivClass15">
+                              <div class="DivClass16">
+                                <div>
+                                    <p>Seat</p>
+                                    <hr>
+                                    <p>A1</p>
+                                    <p>C2</p>
+                                </div>
+
+                                <div>
+                                    <p>Class</p>
+                                    <hr>
+                                    <p>Economy</p>
+                                    <p>Economy</p>
+                                </div>
+
+                                <div>
+                                    <p>Price</p>
+                                    <hr>
+                                    <p>120</p>
+                                    <p>120</p>
+                                </div>
+                              </div>
+
+
+                              <hr>
+
+
+                              <div class="DivClass17">
+                                <p>Total Price</p>
+                                <p>BDT <span>220</span></p>
+                              </div>
+
+
+                              <div class="DivClass18">
+                                <input type="text" placeholder="Coupon Code">
+                                <button>Apply</button>
+                              </div>
+
+
+                              <div class="DivClass17">
+                                <p>Grand Total</p>
+                                <p>BDT <span>220</span></p>
+                              </div>
+
+                     </div>
+
+
+                     <div>
+                        <h1 id="id4">Confirm Your Tickets</h1>
+                     </div>
+                </div>
             </div>
 
 
