--- a/index.html
+++ b/index.html
@@ -344,9 +344,17 @@
                      </div>
 
 
-                     <div>
+                     <div class="DivClass19">
                         <h1 id="id4">Confirm Your Tickets</h1>
+                        <h3>Passenger Name: </h3>
+                        <input type="text" placeholder="Enter your name">
+                        <h3>Phone Number</h3>
+                        <input type="text" placeholder="Enter your phone number">
+                        <h3>NID Number</h3>
+                        <input type="text" placeholder="Enter your NID number">
+                        <div><button>Confirm</button></div>
                      </div>
+
                 </div>
             </div>
 
