--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             <div class="DivClass10">
                 <div class="DivClass11">
-                    <h1 id="id3">Select Your Seat</h1>
+                    <h1 id="id3">Reserve Your Seats</h1>
                     <hr>
                     <div class="DivClass13">
                         <div class="DivClass14">
@@ -293,7 +293,7 @@
 
 
                 <div class="DivClass12">
-                    <h1 id="id3">Something</h1>
+                    <h1 id="id3">Ticket & Price Information</h1>
                     <hr>
 
                      <div class="DivClass15">
