--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
 
 
                               <div class="DivClass18">
-                                <input type="text" placeholder="Coupon Code">
-                                <button>Apply</button>
+                                <input id="inputBox" type="text" placeholder="Coupon Code">
+                                <button id="ApplyCoupon">Apply</button>
                               </div>
 
 
