--- a/index.html
+++ b/index.html
@@ -296,22 +296,17 @@
                     <h1 id="id3">Ticket & Price Information</h1>
                     <hr>
 
-                     <div class="DivClass15">
+                     <div class="DivClass15">                 
                               <div class="DivClass16">
-                                <div id="SeatName">
-                                    <p>Seat</p>
-                                    <hr>
-                                </div>
+                                <p>Seat</p>
+                                <p>Class</p>
+                                <p>Price</p>
+                              </div>
 
-                                <div id="SeatClass">
-                                    <p>Class</p>
-                                    <hr>
-                                </div>
+                               <hr>
 
-                                <div id="SeatPrice">
-                                    <p>Price</p>
-                                    <hr>
-                                </div>
+                              <div id="ScrollingDiv">
+                                     <!-- Dynamicallay a div is created for each seat here & each div contains 3 paragraphs-->
                               </div>
 
 
@@ -328,11 +323,19 @@
                                 <input id="inputBox" type="text" placeholder="Coupon Code">
                                 <button id="ApplyCoupon">Apply</button>
                               </div>
-
+                               
+                              <div id="DiscountDiv">
+                                <p id="DiscountInfoDisplay"></p>
+                              </div>
 
                               <div class="DivClass17">
                                 <p>Grand Total</p>
                                 <p>BDT <span id="GrandTotal"></span></p>
+                              </div>
+
+                              <div id="DiscountAlarm" class="DisplayHidden">
+                                <p>You need 4 seats to get discount</p>
+                                <button id="DiscountAlarmButton">OK</button>
                               </div>
 
                      </div>
