--- a/index.html
+++ b/index.html
@@ -360,7 +360,16 @@
         <div id="DiscountAlarm" class="DisplayHidden">
             <p>You need at least 2 seats to get discount</p>
             <button id="DiscountAlarmButton">OK</button>
-          </div>
+        </div>
+
+
+        <div id="ReservationConfirmation" class="DisplayHidden">
+                 <h1>Congratulations !!!</h1>
+                 <h3>Reservation Successful</h3>
+                 <h3>Your Token ID: <SPan id="TokenId"></SPan></h3>
+                 <h3>You have to show your token ID to get ticket from counter</h3>
+                 <button id="ReservationConfirmationButton">Ok</button>
+        </div>
      </section>
 
      <script src="index.js"></script>
